###############################
# Veränderungen von kivitendo #
###############################

2017-XX-XX - Release 3.5.X

kleinere neue Features und Detailverbesserungen:

  - SEPA-XML: alle Sonderzeichen filtern
  - SEPA-Export: Export wieder rückgängig machen, falls noch Status offen
  - Stammdaten -> Berichte -> Artikel: Standardlager und Lagerplatz optional anzeigen

2017-07-17 - Release 3.5.0

große Features:

- Dateiverwaltung (Mini-DMS)

  parallel zum alten WebDAV gibt es nun eine Datei-Management Lösung, die
  über eine Speichermedium unabhängige Zwischenschicht die Dateien in der
  Datenbank verwaltet. Darunter können verschiedene Backends existieren.
  Aktuell ist dies eine Filesystem-Struktur.

  Modular können weitere Backends eingebunden werden. In Arbeit ist
  ein Backend, das auf die alte WebDAV-Struktur zugreift.

  Es gibt unterschiedliche Typen von Dateien, jedem Typ läßt sich in der
  Mandantenkonfigurierung auf ein bestimmtes Backend zuordnen.

  Aktuell gibt es die Dateitypen
  - "documents", das sind entweder generierte, eingescannte oder hochgeladene PDF-Dateien
  - "attachments", zusätzlich hochgeladene Dokumente, die an bestimmte ERP-Objekte angehängt werden
  - "images", hochgeladene Bilder zu Artikeln

  Daneben gibt es Dateiquellen
  - "created" , vom System erzeugte Dokumente
  - "uploaded", hochgeladene Dokumente
  - "scanner1,scanner2" , von einem oder mehreren Scannern erzeugte Dateien
  - "email",  vom Mailsystem empfangene Dateien

- Artikel-Klassifizierung

  Die Klassifizierung von Artikeln dient einer weiteren Gliederung um
  zum Beispiel den Einkauf vom Verkauf zu trennen, etc.

  Gekennzeichnet durch eine Beschreibung (z.B. "Einkauf") und ein Kürzel (z.B. "E")
  Flexibel änderbar und erweiterbar.

  Der Typ des Artikels und die Klassifizierung werden durch zwei
  Buchstaben dargestellt.  Der erste Buchstabe ist eine Lokalisierung
  des Typs des Artikels ('P','A','S') , deutsch 'W', 'E', und 'D' für